--- a/css/main.css
+++ b/css/main.css
@@ -1227,7 +1227,7 @@ top:12.5px;
     color: #1ABC9C;
     margin-top: -90px;
     margin-bottom: 0;
-    padding-top:16.2rem;
+    padding-top:1.2rem;
 }
 
 .subhead--dark {
@@ -2065,7 +2065,7 @@ html.no-csstransitions .home-content__main {
     background-attachment: fixed;
     background-position: center, center;
     background-size: cover;
-    padding: 0 0 15rem 0;
+    padding: 17rem 0 15rem 0;
     min-height: 800px;
     position: relative;
 }
@@ -2508,7 +2508,9 @@ html.no-csstransitions .home-content__main {
     margin-left: 60px;
     margin-right: 30px;
     border-radius: 2px;
-    padding: 1em;}
+    padding: 1em;
+    padding-bottom:28px;
+    }
     .timeline-content-info {
       padding: 5px 10px;
       color: rgba(255,255,255,0.7);
@@ -2557,6 +2559,7 @@ html.no-csstransitions .home-content__main {
     margin-top:0;
     margin-bottom: 5px;
     font-size: 24px !important;
+    margin-top:-24px;
   }
   .cd-timeline-content h3{
     color:#1abc9c;
