--- a/css/responsive.css
+++ b/css/responsive.css
@@ -64,6 +64,27 @@ h1, .h1 {
     }
   }
   @media only screen 
+  and (min-device-width: 414px) 
+  and (max-device-width: 736px) 
+  and (-webkit-min-device-pixel-ratio: 3) { 
+      .header-logo h3{
+      width:160px;
+      font-size:11.5px;
+      margin-left:-88px;
+      margin-top:-10px;
+    }
+    .home-content__scroll a{
+      right:-5px;
+      top:0;
+      margin-bottom: -20px;
+      font-size:7px;
+    }
+    .home-content__line {
+      right:50%;
+    }
+  }
+}
+  @media only screen 
   and (min-device-width: 768px) 
   and (max-device-width: 1024px) 
   and (orientation: portrait) 
