--- a/css/base.css
+++ b/css/base.css
@@ -1,6 +1,6 @@
 /* =================================================================== 
  *
- *  Glint v1.0 Base Stylesheet
+ *  v1.0 Base Stylesheet
  *  11-20-2017
  *  ------------------------------------------------------------------
  *
