--- a/css/responsive.css
+++ b/css/responsive.css
@@ -48,10 +48,9 @@ h1, .h1 {
  and (-webkit-min-device-pixel-ratio: 2)
  and (orientation: portrait) {
     .header-logo h3{
-      width:150px;
+      width:152px;
       font-size:9.5px;
-      margin-left:-88px;
-      margin-top:0.7rem;
+      margin-top:6.7rem;
     }
     .home-content__scroll a{
       right:-5px;
@@ -70,8 +69,7 @@ h1, .h1 {
       .header-logo h3{
       width:160px;
       font-size:11.5px;
-      margin-left:-88px;
-      margin-top:1rem;
+      margin-top:7rem;
     }
     .home-content__scroll a{
       right:-5px;
@@ -91,8 +89,7 @@ h1, .h1 {
     .header-logo h3{
         width:250px;
         font-size:14px;
-        margin-left:-68px;
-        margin-top:10px;
+        margin-top:7rem;
       }
       .home-content__scroll a{
         right:-5px;
@@ -500,15 +497,18 @@ h1, .h1 {
     .about-desc img {
         width: 180px;
         height: 180px;
-        position: relative;
-        margin-bottom:30px;
-        margin-top:10px;
-        left:-4.9rem;
+        top:0;
+        -webkit-transform:translate(-50%);
+        -ms-transform:translate(-50%);
+        transform:translate(-50%);
     }
     .about-desc p{
-        margin:auto;
         font-size:15.3px;
         width:273px;
+        top: 0;
+        -webkit-transform: translate(0,50%);
+        -ms-transform: translate(0,50%);
+        transform: translate(0,50%);
     }
 }
 @media only screen 
@@ -518,15 +518,18 @@ h1, .h1 {
     .about-desc img {
         width: 180px;
         height: 180px;
-        position: relative;
-        margin-bottom:30px;
-        margin-top:10px;
-        left:-74px;
+        top:0;
+        -webkit-transform:translate(-50%);
+        -ms-transform:translate(-50%);
+        transform:translate(-50%);
     }
     .about-desc p{
-        margin:auto;
         font-size:15.3px;
         width:315px;
+        top: 0;
+        -webkit-transform: translate(0,50%);
+        -ms-transform: translate(0,50%);
+        transform: translate(0,50%);
     }
 }
 @media only screen 
@@ -536,15 +539,18 @@ h1, .h1 {
     .about-desc img {
         width: 200px;
         height: 200px;
-        position: relative;
-        margin-bottom:30px;
-        margin-top:10px;
-        left:-8rem;
+        top:0;
+        -webkit-transform:translate(-50%);
+        -ms-transform:translate(-50%);
+        transform:translate(-50%);
     }
     .about-desc p{
-        margin:auto;
         font-size:15.3px;
         width:315px;
+        top: 0;
+        -webkit-transform: translate(0,50%);
+        -ms-transform: translate(0,50%);
+        transform: translate(0,50%);
     }
 }
 @media only screen 
@@ -558,15 +564,18 @@ h1, .h1 {
     .about-desc img {
         width: 300px;
         height: 300px;
-        position: relative;
-        margin-bottom:30px;
-        margin-top:10px;
-        left:-147px;
+        top:0;
+        -webkit-transform:translate(-50%);
+        -ms-transform:translate(-50%);
+        transform:translate(-50%);
     }
     .about-desc p{
-        margin:auto;
         font-size:15.3px;
         width:435px;
+        top: 0;
+        -webkit-transform: translate(0,50%);
+        -ms-transform: translate(0,50%);
+        transform: translate(0,50%);
     }
 }
 @media only screen 
@@ -579,16 +588,18 @@ h1, .h1 {
     .about-desc img {
         width: 400px;
         height: 400px;
-        position: relative;
-        margin-bottom:30px;
-        margin-top:35px;
-        left:-261px;
+        top:0;
+        -webkit-transform:translate(-50%);
+        -ms-transform:translate(-50%);
+        transform:translate(-50%);
     }
     .about-desc p{
-        margin:400px 0 0 200px;
         font-size:28.3px;
         width:550px;
-        text-align:justify;
+        top: 0;
+        -webkit-transform: translate(0,50%);
+        -ms-transform: translate(0,50%);
+        transform: translate(0,50%);
     }
 }
 /* -------------------------------------------------------------------
@@ -672,19 +683,21 @@ h1, .h1 {
   and (max-device-width: 568px)
   and (-webkit-min-device-pixel-ratio: 2) {
     .skillbar{
-          width:260px;
+          width:73vw;
           height:16px;
           font-size:10px;
           margin-left: 2rem;
-      }
-      .skill-bar-percent{
-          right:-30px;
+          top:4.2rem;
+          left:-1.6rem;
       }
       .skillbar-title{
           text-align:center;
           margin-top:28px;
-          left:2rem;
+          left:3rem;
           font-size:13px;
+      }
+      .skill-bar-percent{
+          right:-5.2rem;
       }
 }
 @media only screen
@@ -693,20 +706,21 @@ h1, .h1 {
   and (-webkit-min-device-pixel-ratio: 2)
   and (orientation: portrait) {
       .skillbar{
-          width:300px;
+          width:73vw;
           height:20px;
           font-size:12px;
-          left: 0.9rem;
-      }
-      .skill-bar-percent{
-          right:-30px;
+          top:4.2rem;
+          left:-1.6rem;
       }
       .skillbar-title{
           text-align:center;
           margin-top:28px;
-          margin-left:1rem;
           font-size:13px;
+          left:3rem;
       }
+      .skill-bar-percent{
+        right:-5.8rem;
+    }
 }
 
 @media only screen
@@ -715,13 +729,19 @@ h1, .h1 {
   and (-webkit-min-device-pixel-ratio: 3)
   and (orientation: portrait) {
     .skillbar{
-        width:300px;
+        width:73vw;
         height:20px;
         font-size:12px;
-        left: 2rem;
+        top:.2rem;
+    }
+    .skillbar-title{
+        text-align:center;
+        margin-top:28px;
+        font-size:13px;
+        left:3rem;
     }
     .skill-bar-percent{
-        right:-40px;
+        right:-6.6rem;
     }
   }
   @media only screen 
@@ -729,19 +749,20 @@ h1, .h1 {
   and (max-device-width: 1024px) 
   and (-webkit-min-device-pixel-ratio: 1) {
     .skillbar{
-        width:658px;
+        width:73vw;
         height:50px;
         font-size:16px;
-        margin-left: 40px;
-    }
-    .skill-bar-percent{
-        right:-40px;
+        top:4.2rem;
+        left:-1.6rem;
     }
     .skillbar-title{
         text-align:center;
         margin-top:28px;
         margin-left:-50px;
         font-size:16px;
+    }
+    .skill-bar-percent{
+        right:-7.8rem;
     }
 }
 
