--- a/css/responsive.css
+++ b/css/responsive.css
@@ -504,8 +504,10 @@ h1, .h1 {
     }
     .about-desc p{
         font-size:15.3px;
-        width:273px;
+        width:29.3rem;
         top: 0;
+        left:50%;
+        right:50%;
         -webkit-transform: translate(0,50%);
         -ms-transform: translate(0,50%);
         transform: translate(0,50%);
@@ -525,8 +527,10 @@ h1, .h1 {
     }
     .about-desc p{
         font-size:15.3px;
-        width:315px;
+        width:34.5rem;
         top: 0;
+        left:50%;
+        right:50%;
         -webkit-transform: translate(0,50%);
         -ms-transform: translate(0,50%);
         transform: translate(0,50%);
@@ -546,8 +550,10 @@ h1, .h1 {
     }
     .about-desc p{
         font-size:15.3px;
-        width:315px;
+        width:34.5rem;
         top: 0;
+        left:50%;
+        right:50%;
         -webkit-transform: translate(0,50%);
         -ms-transform: translate(0,50%);
         transform: translate(0,50%);
@@ -573,6 +579,8 @@ h1, .h1 {
         font-size:15.3px;
         width:435px;
         top: 0;
+        left:50%;
+        right:50%;
         -webkit-transform: translate(0,50%);
         -ms-transform: translate(0,50%);
         transform: translate(0,50%);
@@ -597,6 +605,8 @@ h1, .h1 {
         font-size:28.3px;
         width:550px;
         top: 0;
+        left:50%;
+        right:50%;
         -webkit-transform: translate(0,50%);
         -ms-transform: translate(0,50%);
         transform: translate(0,50%);
