change arrow color

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -577,7 +577,7 @@ h1, .h1 {
     }
     .about-desc p{
         font-size:15.3px;
-        width:435px;
+        width:43.5rem;
         top: 0;
         left:50%;
         right:50%;
