--- a/css/main.css
+++ b/css/main.css
@@ -112,7 +112,7 @@ a:hover, a:active {
 
 /* Track */
 ::-webkit-scrollbar-track {
-    background: #090909;
+    background: rgba(0,0,0,0.1) !important;
 }
 
 /* Handle */
