--- a/css/main.css
+++ b/css/main.css
@@ -2008,11 +2008,11 @@ html.no-csstransitions .home-content__main {
     padding-top: 16.2rem;
     padding-bottom: 13.2rem;
     background-color: inherit;
-    background: -moz-linear-gradient(90deg, rgba(0,0,0,0) 0%, rgba(0,0,0,0.1) 1%, rgba(9,9,9,0.21) 10%, rgba(9,9,9,1) 73%), url("../images/hero2.jpg");
-    background: -webkit-linear-gradient(90deg, rgba(0,0,0,0) 0%, rgba(0,0,0,0.1) 1%, rgba(9,9,9,0.21) 10%, rgba(9,9,9,1) 73%), url("../images/hero2.jpg");
-    background: -o-linear-gradient(90deg, rgba(0,0,0,0) 0%, rgba(0,0,0,0.1) 1%, rgba(9,9,9,0.21) 10%, rgba(9,9,9,1) 73%), url("../images/hero2.jpg");
-    background: linear-gradient(0deg, rgba(0,0,0,0) 0%, rgba(0,0,0,0.1) 1%, rgba(9,9,9,0.21) 10%, rgba(9,9,9,1) 73%), url("../images/hero2.jpg");
-    background: linear-gradient(180deg, rgba(0,0,0,0) 0%, rgba(0,0,0,0.1) 1%, rgba(9,9,9,0.21) 10%, rgba(9,9,9,1) 73%), url("../images/hero2.jpg");
+    background: -moz-linear-gradient(90deg, rgba(0,0,0,0) 0%, rgba(0,0,0,0.1) 1%, rgba(9,9,9,0.21) 10%, rgba(9,9,9,1) 73%), url("https://firebasestorage.googleapis.com/v0/b/faturputro-ab596.appspot.com/o/assets%2Fsand-backgruound.jpg?alt=media&token=3c9c5a35-534c-449b-a345-083a86c3c06a");
+    background: -webkit-linear-gradient(90deg, rgba(0,0,0,0) 0%, rgba(0,0,0,0.1) 1%, rgba(9,9,9,0.21) 10%, rgba(9,9,9,1) 73%), url("https://firebasestorage.googleapis.com/v0/b/faturputro-ab596.appspot.com/o/assets%2Fsand-backgruound.jpg?alt=media&token=3c9c5a35-534c-449b-a345-083a86c3c06a");
+    background: -o-linear-gradient(90deg, rgba(0,0,0,0) 0%, rgba(0,0,0,0.1) 1%, rgba(9,9,9,0.21) 10%, rgba(9,9,9,1) 73%), url("https://firebasestorage.googleapis.com/v0/b/faturputro-ab596.appspot.com/o/assets%2Fsand-backgruound.jpg?alt=media&token=3c9c5a35-534c-449b-a345-083a86c3c06a");
+    background: linear-gradient(0deg, rgba(0,0,0,0) 0%, rgba(0,0,0,0.1) 1%, rgba(9,9,9,0.21) 10%, rgba(9,9,9,1) 73%), url(".https://firebasestorage.googleapis.com/v0/b/faturputro-ab596.appspot.com/o/assets%2Fsand-backgruound.jpg?alt=media&token=3c9c5a35-534c-449b-a345-083a86c3c06a");
+    background: linear-gradient(180deg, rgba(0,0,0,0) 0%, rgba(0,0,0,0.1) 1%, rgba(9,9,9,0.21) 10%, rgba(9,9,9,1) 73%), url("https://firebasestorage.googleapis.com/v0/b/faturputro-ab596.appspot.com/o/assets%2Fsand-backgruound.jpg?alt=media&token=3c9c5a35-534c-449b-a345-083a86c3c06a");
     background-repeat: no-repeat;
     background-position: center, center;
     color: #757575;
@@ -2276,11 +2276,11 @@ html.no-csstransitions .home-content__main {
 .s-clients {
     padding-top: 15.2rem;
     padding-bottom: 16.8rem;
-    background: -moz-linear-gradient(180deg, rgba(9,9,9,1) 20%, rgba(9,9,9,0.2553396358543417) 100%), url("../images/hero3.jpg");
-    background: -webkit-linear-gradient(180deg, rgba(9,9,9,1) 20%, rgba(9,9,9,0.2553396358543417) 100%), url("../images/hero3.jpg");
-    background: -o-linear-gradient(180deg, rgba(9,9,9,1) 20%, rgba(9,9,9,0.2553396358543417) 100%), url("../images/hero3.jpg");
-    background: linear-gradient(180deg, rgba(9,9,9,1) 20%, rgba(9,9,9,0.2553396358543417) 100%), url("../images/hero3.jpg");
-    background: linear-gradient(180deg, rgba(9,9,9,1) 20%, rgba(9,9,9,0.2553396358543417) 100%), url("../images/hero3.jpg");
+    background: -moz-linear-gradient(180deg, rgba(9,9,9,1) 20%, rgba(9,9,9,0.2553396358543417) 100%), url("https://firebasestorage.googleapis.com/v0/b/faturputro-ab596.appspot.com/o/assets%2Fsand-backgruound.jpg?alt=media&token=3c9c5a35-534c-449b-a345-083a86c3c06a");
+    background: -webkit-linear-gradient(180deg, rgba(9,9,9,1) 20%, rgba(9,9,9,0.2553396358543417) 100%), url("https://firebasestorage.googleapis.com/v0/b/faturputro-ab596.appspot.com/o/assets%2Fsand-backgruound.jpg?alt=media&token=3c9c5a35-534c-449b-a345-083a86c3c06a");
+    background: -o-linear-gradient(180deg, rgba(9,9,9,1) 20%, rgba(9,9,9,0.2553396358543417) 100%), url("https://firebasestorage.googleapis.com/v0/b/faturputro-ab596.appspot.com/o/assets%2Fsand-backgruound.jpg?alt=media&token=3c9c5a35-534c-449b-a345-083a86c3c06a");
+    background: linear-gradient(180deg, rgba(9,9,9,1) 20%, rgba(9,9,9,0.2553396358543417) 100%), url("https://firebasestorage.googleapis.com/v0/b/faturputro-ab596.appspot.com/o/assets%2Fsand-backgruound.jpg?alt=media&token=3c9c5a35-534c-449b-a345-083a86c3c06a");
+    background: linear-gradient(180deg, rgba(9,9,9,1) 20%, rgba(9,9,9,0.2553396358543417) 100%), url("https://firebasestorage.googleapis.com/v0/b/faturputro-ab596.appspot.com/o/assets%2Fsand-backgruound.jpg?alt=media&token=3c9c5a35-534c-449b-a345-083a86c3c06a");
     color: #757575;
     position: relative;
     background-size:cover;
